# woodfine-fleet-manifest

./: ARCHITECTURE.md  Cargo.toml  INVENTORY.yaml  LICENSE.md  README.md
app/: README.md
asset/: README.md
asset-design-system/: README.md
cluster-totebox-corporate/: README.md
cluster-totebox-corporate-1/: README.md
cluster-totebox-personnel/: README.md
cluster-totebox-real-property/: README.md
fleet-infrastructure-gcp/: README.md
fleet-infrastructure-leased/: README.md  SYS-BOOT-01.yaml
fleet-infrastructure-onprem/: README.md
gateway-interface-command/: README.md
media-knowledge-corporate/: README.md
media-knowledge-projects/: README.md
media-marketing-landing/: README.md
moonshot/: README.md
node-console-content/: README.md
node-console-email/: README.md
node-console-people/: README.md
os/: README.md
route-network-admin/: README.md  SYS-BOOT-02.yaml
service/: README.md
system/: README.md
vault-privategit-source/: README.md
