[workspace]
resolver = "2"

# The Sovereign Workspace encompassing all PointSav Digital Systems AG crates
members = [
    "system-substrate",
    "system-security",
    "system-core",
    "service-content",
    "service-people",
    "os-infrastructure",
    "os-totebox",
    "moonshot-kernel"
]

[workspace.package]
version = "1.0.0-PROD"
authors = ["PointSav Digital Systems AG"]
edition = "2024"
